--- a/style.css
+++ b/style.css
@@ -46,3 +46,145 @@ body{
     border-radius: 15px;
     
 }
+.donate-money{
+    width: 100%;
+    height: 40%;
+}
+.money-text{
+    width: 60%;
+    text-align: center;
+    position: absolute;
+    padding-top: 7%;
+    padding-left: 20%;
+    color: black;
+}
+.money-text h1{
+    font-size: 400%;
+      text-align: center;
+      font-weight: 900px;
+}
+#donate-para{
+    width: 80%;
+    font-size: 30px;
+    padding-left: 10%;
+    color: grey;
+   
+
+}
+.money-container{
+   display: flex;
+   top: 50%;
+   padding-top: 25%;
+   padding-left: 25%;
+   
+}
+.container-item1{
+    background-color: whitesmoke;
+    border: 2px solid white;
+    border-radius: 10px;
+    margin: 10px; 
+    width: 180px;
+    height: 150px;
+    
+}
+.container-item1 h1{
+         text-align: center;
+         font-size: 35px;
+         font-weight: bold;
+         padding-top: 20%;
+         color: rgb(103, 98, 98);
+}
+.container-item2{
+    background-color: rgb(250, 204, 204);
+    border: 3px solid rgb(254, 119, 119);
+    border-radius: 10px;
+    margin: 10px; 
+    width: 180px;
+    height: 150px;
+}
+.container-item2 h1{
+    text-align: center;
+    font-size: 35px;
+    font-weight: bold;
+    padding-top: 20%;
+    color: rgb(254, 119, 119);
+}
+.container-item3{
+    background-color: whitesmoke;
+    border: 2px solid white;
+    border-radius: 10px;
+    margin: 10px; 
+    width: 180px;
+    height: 150px;
+}
+.container-item3 h1{
+    text-align: center;
+    font-size: 35px;
+    font-weight: bold;
+    padding-top: 20%;
+    color: rgb(103, 98, 98);
+}
+.container-item4{
+    background-color: whitesmoke;
+    border: 2px solid white;
+    border-radius: 10px;
+    margin: 10px; 
+    width: 180px;
+    height: 150px;
+}
+.container-item4 h1{
+    text-align: center;
+    font-size: 35px;
+    font-weight: bold;
+    padding-top: 20%;
+    color: rgb(103, 98, 98);
+}
+.container-item5{
+    background-color: whitesmoke;
+    border: 2px solid white;
+    border-radius: 10px;
+    margin: 10px; 
+    width: 180px;
+    height: 150px;
+}
+.container-item5 h1{
+    text-align: center;
+    font-size: 35px;
+    font-weight: bold;
+    padding-top: 20%;
+    color: rgb(103, 98, 98);
+}
+.input-data{
+    height: 50px;
+    width: 100%;
+    padding-top: 4%;
+    padding-left: 25%;
+    position: relative;
+}
+.input-data input{
+    height: 100%;
+    width: 45%;
+    padding-right: 10%;
+    border: none;
+    border-bottom: solid grey;
+}
+.input-data label{
+      position: absolute;
+      bottom: 20px;
+      left: 35%;
+      color: grey;
+      font-size: 30px;
+}
+
+.Donate-now{
+    margin-top: 2%;
+    margin-left: 45%;
+}
+.donate-style{
+    text-decoration: none;
+    background-image: linear-gradient(rgb(247, 95, 95) , rgb(235, 80, 80));
+    color: white;
+    font-size: 190%;
+    padding: 15px 45px;  
+    border-radius: 8px;
+}
