--- a/style.css
+++ b/style.css
@@ -240,3 +240,69 @@ body{
  .left-side{
      margin-left: 5%;
  }
+ .ad-branding{
+    margin-right: 20%;
+ }
+ .ad-brand{
+    width: 100%;
+    height: 150px;
+    margin-right: 9%;
+    margin-left: 5%; 
+    
+    
+ }
+ .ad-brand h1{
+
+    width: 20%;
+    height: 50%;
+    margin-top: 10%;
+    margin-left: 40%;
+    padding-left: 12px;
+    font-size: 30px;
+    border: 2px solid black;
+    
+    
+ }
+ .marketing-style{
+    padding-left: 20%;
+    color: rgb(8, 136, 136);
+ }
+ .ad-brand img{
+    margin-right: 40%;
+    padding-left: 26%;
+ }
+ .contact-us{
+    margin-top: 2%;
+    margin-left: 45%;
+ }
+ .update-part{
+    margin-top: 25%;
+ }
+ form{
+    width: 90%;
+    margin-left: 25%;
+ }
+ .style-email{
+    width: 600px;
+    background: rgb(227, 161, 161);
+    padding: 30px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+ }
+ .footer-style{
+    width: 100%;
+    margin-top: 60%;
+    text-align: center;
+    background-color: black;
+ }
+ .footer-style h1{
+    
+    font-size: 40px;
+    padding-top: 15px;
+    color: rgb(222, 137, 118);
+ }
+ .footer-style h4{
+    font-size: 15px;
+    padding-bottom: 15px;
+    color: rgb(253, 255, 255);
+ }
+ 
